chore(common): fix tables in breaking changes articles and remaining warnings

--- a/upgrade/breaking-changes/3-0-0.md
+++ b/upgrade/breaking-changes/3-0-0.md
@@ -28,6 +28,7 @@ Note the following changes when using manual data operations:
 
 >caption OnRead Usage in UI for Blazor up to version 2.30 and after version 3.0
 
+<div class="skip-repl"></div>
 <table>
     <thead><tr>
         <th>UI for Blazor 2.30</th>
@@ -35,78 +36,86 @@ Note the following changes when using manual data operations:
     </tr></thead>
     <tbody>
         <tr>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;TelerikComboBox Data="@ComboData"
+<td>
+
+````RAZOR
+<TelerikComboBox Data="@ComboData"
                  OnRead="@OnComboRead"
-                 TotalCount="@ComboTotal" /&gt;
+                 TotalCount="@ComboTotal" />
 
-&lt;TelerikGrid Data="@GridData"
+<TelerikGrid Data="@GridData"
              OnRead="@OnGridRead"
-             TotalCount="@GridTotal" /&gt;
+             TotalCount="@GridTotal" />
 
-</code></pre><pre><code>
-List&lt;Product&gt; SourceData { get; set; } = new();
-List&lt;Product&gt; ComboData { get; set; }
-List&lt;Product&gt; GridData { get; set; }
-int ComboTotal { get; set; } = 0;
-int GridTotal { get; set; } = 0;
+@code {
+    List<Product> SourceData { get; set; } = new();
+    List<Product> ComboData { get; set; }
+    List<Product> GridData { get; set; }
+    int ComboTotal { get; set; } = 0;
+    int GridTotal { get; set; } = 0;
 
-protected void OnComboRead(ComboBoxReadEventArgs args)
-{
-    var result = SourceData.ToDataSourceResult(args.Request);
+    protected void OnComboRead(ComboBoxReadEventArgs args)
+    {
+        var result = SourceData.ToDataSourceResult(args.Request);
 
-    ComboData = result.Data.Cast&lt;Product&gt;().ToList();
-    ComboTotal = result.Total;
+        ComboData = result.Data.Cast<Product>().ToList();
+        ComboTotal = result.Total;
+    }
+
+    protected void OnGridRead(GridReadEventArgs args)
+    {
+        var result = SourceData.ToDataSourceResult(args.Request);
+
+        GridData = result.Data.Cast<Product>().ToList();
+        GridTotal = result.Total;
+        // aggregates N/A
+    }
 }
 
-protected void OnGridRead(GridReadEventArgs args)
-{
-    var result = SourceData.ToDataSourceResult(args.Request);
+````
+</td>
+<td>
 
-    GridData = result.Data.Cast&lt;Product&gt;().ToList();
-    GridTotal = result.Total;
-    // aggregates N/A
-}
-</code></pre>
-            </td>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;TelerikComboBox TItem="@Product"
+````RAZOR
+<TelerikComboBox TItem="@Product"
                  TValue="@int"
-                 OnRead="@OnComboRead" /&gt;
+                 OnRead="@OnComboRead" />
 
-&lt;TelerikGrid TItem="@Product"
-             OnRead="@OnGridRead" /&gt;
+<TelerikGrid TItem="@Product"
+             OnRead="@OnGridRead" />
 
+@code{
+    List<Product> SourceData { get; set; } = new();
 
-</code></pre><pre><code>
-List&lt;Product&gt; SourceData { get; set; } = new();
+    protected void OnComboRead(ComboBoxReadEventArgs args)
+    {
+        var result = SourceData.ToDataSourceResult(args.Request);
 
+        args.Data = result.Data;
+        args.Total = result.Total;
+    }
 
+    protected void OnGridRead(GridReadEventArgs args)
+    {
+        var result = SourceData.ToDataSourceResult(args.Request);
 
-
-
-protected void OnComboRead(ComboBoxReadEventArgs args)
-{
-    var result = SourceData.ToDataSourceResult(args.Request);
-
-    args.Data = result.Data;
-    args.Total = result.Total;
+        args.Data = result.Data;
+        args.Total = result.Total;
+        args.AggregateResults = result.AggregateResults;
+    }
 }
 
-protected void OnGridRead(GridReadEventArgs args)
-{
-    var result = SourceData.ToDataSourceResult(args.Request);
 
-    args.Data = result.Data;
-    args.Total = result.Total;
-    args.AggregateResults = result.AggregateResults;
-}
-</code></pre>
-            </td>
-        </tr>
-    </tbody>
+
+
+
+
+
+````
+
+</td>
+</tr>
+</tbody>
 </table>
 
 ### Popup Settings
@@ -115,6 +124,7 @@ protected void OnGridRead(GridReadEventArgs args)
 
 >caption Popup configuration in UI for Blazor up to version 2.30 and after version 3.0
 
+<div class="skip-repl"></div>
 <table>
     <thead><tr>
         <th>UI for Blazor 2.30</th>
@@ -122,30 +132,34 @@ protected void OnGridRead(GridReadEventArgs args)
     </tr></thead>
     <tbody>
         <tr>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;TelerikComboBox PopupClass="my-class"
+<td>
+
+````RAZOR
+<TelerikComboBox PopupClass="my-class"
                  PopupHeight="200px"
-                 PopupWidth="150px"&gt;
+                 PopupWidth="150px">
 
 
 
-&lt;/TelerikComboBox&gt;
-</code></pre>
-            </td>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;TelerikComboBox&gt;
-    &lt;ComboBoxSettings&gt;
-        &lt;ComboBoxPopupSettings Class="my-class"
+</TelerikComboBox>
+````
+
+</td>
+<td>
+
+````RAZOR
+<TelerikComboBox>
+    <ComboBoxSettings>
+        <ComboBoxPopupSettings Class="my-class"
                                Height="200px"
-                               Width="150px" /&gt;
-    &lt;/ComboBoxSettings&gt;
-&lt;/TelerikComboBox&gt;
-</code></pre>
-            </td>
-        </tr>
-    </tbody>
+                               Width="150px" />
+    </ComboBoxSettings>
+</TelerikComboBox>
+````
+
+</td>
+</tr>
+</tbody>
 </table>
 
 ### Other Common Changes
@@ -165,6 +179,7 @@ protected void OnGridRead(GridReadEventArgs args)
 
 >caption Grid export stream in UI for Blazor up to version 2.30 and after version 3.0
 
+<div class="skip-repl"></div>
 <table>
     <thead><tr>
         <th>UI for Blazor 2.30</th>
@@ -172,9 +187,10 @@ protected void OnGridRead(GridReadEventArgs args)
     </tr></thead>
     <tbody>
         <tr>
-            <td style="vertical-align:top">
-<pre><code>
-TelerikGrid&lt;GridModel&gt; GridRef { get; set; }
+<td>
+
+````C#
+TelerikGrid<GridModel> GridRef { get; set; }
 
 void ExportToExcel()
 {
@@ -185,11 +201,15 @@ void ExportToCsv()
 {
     var exportStream = GridRef.ExportToCsv();
 }
-</code></pre>
-            </td>
-            <td style="vertical-align:top">
-<pre><code>
-TelerikGrid&lt;GridModel&gt; GridRef { get; set; }
+
+
+````
+
+</td>
+<td>
+
+````C#
+TelerikGrid<GridModel> GridRef { get; set; }
 
 async Task ExportToExcel()
 {
@@ -200,16 +220,18 @@ async Task ExportToCsv()
 {
     var exportStream = await GridRef.ExportToCsvAsync();
 }
-</code></pre>
-            </td>
-        </tr>
-    </tbody>
+````
+
+</td>
+</tr>
+</tbody>
 </table>
 
 - Removed `ExpandedRows` (`ICollection<int>`) in favor of `ExpandedItems` (`ICollection<TItem>`) in the [GridState](/blazor-ui/api/Telerik.Blazor.Components.GridState-1). `ExpandedItems` expects items, instead of item indexes. Also, the `PropertyName` argument in the [`OnStateChanged` event]({%slug grid-state%}#events) changes from `"ExpandedRows"` to `"ExpandedItems"` in hierarchy scenarios.
 
 >caption Expand Grid rows in UI for Blazor up to version 2.30 and after version 3.0
 
+<div class="skip-repl"></div>
 <table>
     <thead><tr>
         <th>UI for Blazor 2.30</th>
@@ -217,30 +239,36 @@ async Task ExportToCsv()
     </tr></thead>
     <tbody>
         <tr>
-            <td style="vertical-align:top">
-<pre><code>
-List&lt;GridModel&gt; GridData { get; set; }
+<td>
 
-async Task OnGridStateInit(GridStateEventArgs&lt;GridModel&gt; args)
+````C#
+List<GridModel> GridData { get; set; }
+
+async Task OnGridStateInit(GridStateEventArgs<GridModel> args)
 {
     // expand first Grid row
     args.GridState.ExpandedRows =
-        new List&lt;int&gt; { 0 };
+        new List<int> { 0 };
 }
-</code></pre>
-            </td>
-            <td style="vertical-align:top">
-<pre><code>
-List&lt;GridModel&gt; GridData { get; set; }
 
-async Task OnGridStateInit(GridStateEventArgs&lt;GridModel&gt; args)
+
+````
+
+</td>
+<td>
+
+````C#
+List<GridModel> GridData { get; set; }
+
+async Task OnGridStateInit(GridStateEventArgs<GridModel> args)
 {
     // expand first Grid row
     args.GridState.ExpandedItems =
-        new List&lt;GridModel&gt; { GridData.FirstOrDefault() };
+        new List<GridModel> { GridData.FirstOrDefault() };
 }
-</code></pre>
-            </td>
+````
+
+</td>
         </tr>
     </tbody>
 </table>
@@ -251,6 +279,7 @@ async Task OnGridStateInit(GridStateEventArgs&lt;GridModel&gt; args)
 
 >caption Primary Button style in UI for Blazor up to version 2.30 and after version 3.0
 
+<div class="skip-repl"></div>
 <table>
     <thead><tr>
         <th>UI for Blazor 2.30</th>
@@ -258,18 +287,24 @@ async Task OnGridStateInit(GridStateEventArgs&lt;GridModel&gt; args)
     </tr></thead>
     <tbody>
         <tr>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;TelerikButton
-    Primary="true" /&gt;
-</code></pre>
-            </td>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;TelerikButton
-    ThemeColor="@ThemeConstants.Button.ThemeColor.Primary" /&gt;
-</code></pre>
-            </td>
+<td>
+
+````RAZOR
+<TelerikButton
+    Primary="true" />
+
+    
+````
+
+</td>
+<td>
+
+````RAZOR
+<TelerikButton
+    ThemeColor="@ThemeConstants.Button.ThemeColor.Primary" />
+````
+
+</td>
         </tr>
     </tbody>
 </table>
@@ -281,6 +316,7 @@ async Task OnGridStateInit(GridStateEventArgs&lt;GridModel&gt; args)
 
 >caption Loader and LoaderContainer in UI for Blazor up to version 2.30 and after version 3.0
 
+<div class="skip-repl"></div>
 <table>
     <thead><tr>
         <th>UI for Blazor 2.30</th>
@@ -288,28 +324,37 @@ async Task OnGridStateInit(GridStateEventArgs&lt;GridModel&gt; args)
     </tr></thead>
     <tbody>
         <tr>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;TelerikLoader
-    Size="@LoaderSize.Large"
-    ThemeColor="@ThemeColors.Tertiary" /&gt;
+<td>
 
-&lt;TelerikLoaderContainer
+````RAZOR
+<TelerikLoader
     Size="@LoaderSize.Large"
-    ThemeColor="@ThemeColors.Tertiary" /&gt;
-</code></pre>
-            </td>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;TelerikLoader
-    Size="@ThemeConstants.Loader.Size.Large"
-    ThemeColor="@ThemeConstants.Loader.ThemeColor.Tertiary" /&gt;
+    ThemeColor="@ThemeColors.Tertiary" />
 
-&lt;TelerikLoaderContainer
+<TelerikLoaderContainer
+    Size="@LoaderSize.Large"
+    ThemeColor="@ThemeColors.Tertiary" />
+
+
+
+
+
+````
+
+</td>
+<td>
+
+````RAZOR
+<TelerikLoader
     Size="@ThemeConstants.Loader.Size.Large"
-    ThemeColor="@ThemeConstants.Loader.ThemeColor.Tertiary" /&gt;
-</code></pre>
-            </td>
+    ThemeColor="@ThemeConstants.Loader.ThemeColor.Tertiary" />
+
+<TelerikLoaderContainer
+    Size="@ThemeConstants.Loader.Size.Large"
+    ThemeColor="@ThemeConstants.Loader.ThemeColor.Tertiary" />
+````
+
+</td>
         </tr>
     </tbody>
 </table>
@@ -318,6 +363,7 @@ async Task OnGridStateInit(GridStateEventArgs&lt;GridModel&gt; args)
 
 >caption TextBox Label in UI for Blazor up to version 2.30 and after version 3.0
 
+<div class="skip-repl"></div>
 <table>
     <thead><tr>
         <th>UI for Blazor 2.30</th>
@@ -325,21 +371,27 @@ async Task OnGridStateInit(GridStateEventArgs&lt;GridModel&gt; args)
     </tr></thead>
     <tbody>
         <tr>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;TelerikTextBox
+<td>
+
+````RAZOR
+<TelerikTextBox
     @bind-Value="@Value"
-    Label="First Name*:" /&gt;
-</code></pre>
-            </td>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;TelerikFloatingLabel Text="First Name*:"&gt;
-    &lt;TelerikTextBox
-        @bind-Value="@Value" /&gt;
-&lt;/TelerikFloatingLabel&gt;
-</code></pre>
-            </td>
+    Label="First Name*:" />
+
+
+````
+
+</td>
+<td>
+
+````RAZOR
+<TelerikFloatingLabel Text="First Name*:">
+    <TelerikTextBox
+        @bind-Value="@Value" />
+</TelerikFloatingLabel>
+````
+
+</td>
         </tr>
     </tbody>
 </table>
@@ -348,6 +400,7 @@ async Task OnGridStateInit(GridStateEventArgs&lt;GridModel&gt; args)
 
 >caption TileLayout resize and reorder events in UI for Blazor up to version 2.30 and after version 3.0
 
+<div class="skip-repl"></div>
 <table>
     <thead><tr>
         <th>UI for Blazor 2.30</th>
@@ -355,16 +408,17 @@ async Task OnGridStateInit(GridStateEventArgs&lt;GridModel&gt; args)
     </tr></thead>
     <tbody>
         <tr>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;TelerikTileLayout Resizable="true"
+<td>
+
+````RAZOR
+<TelerikTileLayout Resizable="true"
                    Reorderable="true"
                    OnReorder="@OnReorderHandler"
-                   OnResize="@OnResizeHandler"&gt;
-    &lt;TileLayoutItems&gt;
-        &lt;TileLayoutItem /&gt;
-    &lt;/TileLayoutItems&gt;
-&lt;/TelerikTileLayout&gt;
+                   OnResize="@OnResizeHandler">
+    <TileLayoutItems>
+        <TileLayoutItem />
+    </TileLayoutItems>
+</TelerikTileLayout>
 
 @code {
     void OnResizeHandler()
@@ -382,18 +436,22 @@ async Task OnGridStateInit(GridStateEventArgs&lt;GridModel&gt; args)
 
     }
 }
-</code></pre>
-            </td>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;TelerikTileLayout Resizable="true"
+
+
+````
+
+</td>
+<td>
+
+````RAZOR
+<TelerikTileLayout Resizable="true"
                    Reorderable="true"
                    OnReorder="@OnReorderHandler"
-                   OnResize="@OnResizeHandler"&gt;
-    &lt;TileLayoutItems&gt;
-        &lt;TileLayoutItem Id="tile1" /&gt;
-    &lt;/TileLayoutItems&gt;
-&lt;/TelerikTileLayout&gt;
+                   OnResize="@OnResizeHandler">
+    <TileLayoutItems>
+        <TileLayoutItem Id="tile1" />
+    </TileLayoutItems>
+</TelerikTileLayout>
 
 @code {
     void OnResizeHandler(TileLayoutResizeEventArgs args)
@@ -411,8 +469,9 @@ async Task OnGridStateInit(GridStateEventArgs&lt;GridModel&gt; args)
         }
     }
 }
-</code></pre>
-            </td>
+````
+
+</td>
         </tr>
     </tbody>
 </table>
@@ -424,6 +483,7 @@ async Task OnGridStateInit(GridStateEventArgs&lt;GridModel&gt; args)
 
 >caption TreeView expanded items in UI for Blazor up to version 2.30 and after version 3.0
 
+<div class="skip-repl"></div>
 <table>
     <thead><tr>
         <th>UI for Blazor 2.30</th>
@@ -431,57 +491,68 @@ async Task OnGridStateInit(GridStateEventArgs&lt;GridModel&gt; args)
     </tr></thead>
     <tbody>
         <tr>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;TelerikTreeView Data="@TreeData"&gt;
+<td>
 
-    &lt;TreeViewBindings&gt;
-        &lt;TreeViewBinding ExpandedField="IsExpanded" /&gt;
-    &lt;/TreeViewBindings&gt;
-&lt;/TelerikTreeView&gt;
-</code></pre><pre><code>
-IEnumerable&lt;TreeItem&gt; TreeData { get; set; }
+````RAZOR
+<TelerikTreeView Data="@TreeData">
+
+    <TreeViewBindings>
+        <TreeViewBinding ExpandedField="IsExpanded" />
+    </TreeViewBindings>
+</TelerikTreeView>
+
+@code{
+
+    IEnumerable<TreeItem> TreeData { get; set; }
 
 
 
-protected override void OnInitialized()
-{
-    // expanded items depend on
-    // the IsExpanded value of each item
+    protected override void OnInitialized()
+    {
+        // expanded items depend on
+        // the IsExpanded value of each item
 
-}
+    }
 
-public class TreeItem
-{
-    public bool IsExpanded { get; set; }
-}
-</code></pre>
-            </td>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;TelerikTreeView Data="@TreeData"
-                 @bind-ExpandedItems="@ExpandedItems"&gt;
-    &lt;TreeViewBindings&gt;
-        &lt;TreeViewBinding /&gt;
-    &lt;/TreeViewBindings&gt;
-&lt;/TelerikTreeView&gt;
-</code></pre><pre><code>
-IEnumerable&lt;TreeItem&gt; TreeData { get; set; }
-IEnumerable&lt;object&gt; ExpandedItems { get; set; }
-    = new List&lt;TreeItem&gt;();
-
-protected override void OnInitialized()
-{
-    // expanded items depend on
-    ExpandedItems = FlatData.Where(x => x.HasChildren == true).ToList();
-}
-
-public class TreeItem
-{
+    public class TreeItem
+    {
+        public bool IsExpanded { get; set; }
+    }
 
 }
-</code></pre>
-            </td>
+````
+
+</td>
+<td>
+
+````RAZOR
+<TelerikTreeView Data="@TreeData"
+                 @bind-ExpandedItems="@ExpandedItems">
+    <TreeViewBindings>
+        <TreeViewBinding />
+    </TreeViewBindings>
+</TelerikTreeView>
+
+@code{
+
+    IEnumerable<TreeItem> TreeData { get; set; }
+    IEnumerable<object> ExpandedItems { get; set; }
+        = new List<TreeItem>();
+
+    protected override void OnInitialized()
+    {
+        // expanded items depend on
+        ExpandedItems = TreeData.Where(x => x.HasChildren == true).ToList();
+    }
+
+    public class TreeItem
+    {
+
+    }
+}
+````
+
+</td>
         </tr>
     </tbody>
 </table>
@@ -516,6 +587,7 @@ Some CSS classes related to component state were renamed.
 
 The `k-widget` CSS class was removed from all components. If you use this class in custom CSS code, replace it with the corresponding component-specific classes.
 
+<div class="skip-repl"></div>
 <table>
     <thead><tr>
         <th>UI for Blazor 2.30</th>
@@ -523,29 +595,36 @@ The `k-widget` CSS class was removed from all components. If you use this class 
     </tr></thead>
     <tbody>
         <tr>
-            <td>
-<pre><code>&lt;div class="k-widget k-grid">&lt;/div&gt;
-&lt;span class="k-widget k-combobox">&lt;/span&gt;
+<td>
 
-&lt;style&gt;
+````HTML
+<div class="k-widget k-grid"></div>
+<span class="k-widget k-combobox"></span>
+
+<style>
     .foo .k-widget {
         /* ... */
     }
-&lt;/style&gt;
- 
-</code></pre>
-            </td>
-            <td>
-<pre><code>&lt;div class="k-grid">&lt;/div&gt;
-&lt;span class="k-combobox">&lt;/span&gt;
 
-&lt;style&gt;
+</style>
+````
+
+</td>
+<td>
+
+````HTML
+<div class="k-grid"></div>
+<span class="k-combobox"></span>
+
+<style>
     .foo .k-grid,
     .foo .k-combobox {
         /* ... */
     }
-&lt;/style&gt;</code></pre>
-            </td>
+</style>
+````
+
+</td>
         </tr>
     </tbody>
 </table>
