--- a/upgrade/breaking-changes/4-0-0.md
+++ b/upgrade/breaking-changes/4-0-0.md
@@ -26,6 +26,7 @@ To define custom icon classes inline, use `Icon="@( "my-icon-class" )"`.
 
 To use Telerik font icons with UI for Blazor 4.6.0 and above, [register `font-icons.css`]({%slug common-features-icons%}#font-icon-stylesheet).
 
+<div class="skip-repl"></div>
 <table>
     <thead><tr>
         <th>UI for Blazor 3.7.0</th>
@@ -33,24 +34,29 @@ To use Telerik font icons with UI for Blazor 4.6.0 and above, [register `font-ic
     </tr></thead>
     <tbody>
         <tr>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;TelerikButton Icon="save"&gt; Font Icon Button &lt;/TelerikButton&gt;
+<td>
 
-&lt;GridCommandButton Icon="save"&gt; Font Icon Command Button &lt;/GridCommandButton&gt;
 
-&lt;TelerikButton IconClass="fa fa-foo"&gt; Custom Icon Button &lt;/TelerikButton&gt;
-</code></pre>
-            </td>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;TelerikButton Icon="@SvgIcon.Save"&gt; SVG Icon Button &lt;/TelerikButton&gt;
+````RAZOR
+<TelerikButton Icon="save"> Font Icon Button </TelerikButton>
 
-&lt;GridCommandButton Icon="@SvgIcon.Save"&gt; SVG Icon Command Button &lt;/GridCommandButton&gt;
+<GridCommandButton Icon="save"> Font Icon Command Button </GridCommandButton>
 
-&lt;TelerikButton Icon="@( "fa fa-foo" )"&gt; Custom Icon Button &lt;/TelerikButton&gt;
-</code></pre>
-            </td>
+<TelerikButton IconClass="fa fa-foo"> Custom Icon Button </TelerikButton>
+````
+
+</td>
+<td>
+
+````RAZOR
+<TelerikButton Icon="@SvgIcon.Save"> SVG Icon Button </TelerikButton>
+
+<GridCommandButton Icon="@SvgIcon.Save"> SVG Icon Command Button </GridCommandButton>
+
+<TelerikButton Icon="@( "fa fa-foo" )"> Custom Icon Button </TelerikButton>
+````
+
+</td>
         </tr>
     </tbody>
 </table>
@@ -127,6 +133,7 @@ Removed the `Shape` parameter from:
 
 >caption Stretched enum value in UI for Blazor up to version 3.7.0 and after version 4.0.0
 
+<div class="skip-repl"></div>
 <table>
     <thead><tr>
         <th>UI for Blazor 3.7.0</th>
@@ -134,64 +141,36 @@ Removed the `Shape` parameter from:
     </tr></thead>
     <tbody>
         <tr>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;CardActions Layout="@CardActionsLayout.Stretched /&gt;
-</code></pre>
-            </td>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;CardActions Layout="@CardActionsLayout.Stretch" /&gt;
-</code></pre>
-            </td>
-        </tr>  
-        <tr>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;TelerikDialog ButtonsLayout="@DialogButtonsLayout.Stretched" /&gt;
-</code></pre>
-            </td>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;TelerikDialog ButtonsLayout="@DialogButtonsLayout.Stretch" /&gt;
-</code></pre>
-            </td>
-        </tr>
-        <tr>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;GridPopupEditFormSettings ButtonsLayout="FormButtonsLayout.Stretched" /&gt;
-</code></pre>
-            </td>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;GridPopupEditFormSettings ButtonsLayout="FormButtonsLayout.Stretch" /&gt;
-</code></pre>
-            </td>
-        </tr>
-        <tr>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;SchedulerPopupEditFormSettings ButtonsLayout="FormButtonsLayout.Stretched" /&gt;
-</code></pre>
-            </td>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;SchedulerPopupEditFormSettings ButtonsLayout="FormButtonsLayout.Stretch" /&gt;
-</code></pre>
-            </td>
-        </tr>
-        <tr>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;TreeListPopupEditFormSettings ButtonsLayout="FormButtonsLayout.Stretched" /&gt;
-</code></pre>
-            </td>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;TreeListPopupEditFormSettings ButtonsLayout="FormButtonsLayout.Stretch" /&gt;
-</code></pre>
-            </td>
+<td>
+
+````RAZOR
+<CardActions Layout="@CardActionsLayout.Stretched" />
+
+<TelerikDialog ButtonsLayout="@DialogButtonsLayout.Stretched" />
+
+<GridPopupEditFormSettings ButtonsLayout="@FormButtonsLayout.Stretched" />
+
+<SchedulerPopupEditFormSettings ButtonsLayout="@FormButtonsLayout.Stretched" />
+
+<TreeListPopupEditFormSettings ButtonsLayout="@FormButtonsLayout.Stretched" />
+````
+
+</td>
+<td>
+
+````RAZOR
+<CardActions Layout="@CardActionsLayout.Stretch" />
+
+<TelerikDialog ButtonsLayout="@DialogButtonsLayout.Stretch" />
+
+<GridPopupEditFormSettings ButtonsLayout="@FormButtonsLayout.Stretch" />
+
+<SchedulerPopupEditFormSettings ButtonsLayout="@FormButtonsLayout.Stretch" />
+
+<TreeListPopupEditFormSettings ButtonsLayout="@FormButtonsLayout.Stretch" />
+````
+
+</td>
         </tr>
     </tbody>
 </table>
@@ -202,6 +181,7 @@ Added an `Async` suffix to the name of asynchronous methods.
 
 >caption Method signatures in UI for Blazor up to version 3.7.0 and after version 4.0.0
 
+<div class="skip-repl"></div>
 <table>
     <thead><tr>
         <th>UI for Blazor 3.7.0</th>
@@ -209,36 +189,36 @@ Added an `Async` suffix to the name of asynchronous methods.
     </tr></thead>
     <tbody>
         <tr>
-            <td style="vertical-align:top">
-<pre><code>
-private TelerikGrid<GridModel> GridRef { get; set; }
+<td>
+
+````C#
+private TelerikGrid GridRef { get; set; }
 // ...
 await GridRef.SetState(desiredState);
-</code></pre>
-            </td>
-            <td style="vertical-align:top">
-<pre><code>
-private TelerikGrid<GridModel> GridRef { get; set; }
+
 // ...
-await GridRef.SetStateAsync(desiredState);
-</code></pre>
-            </td>
-        </tr>
-        <tr>
-            <td style="vertical-align:top">
-<pre><code>
-private TelerikTreeList<TreeListModel> TreeListRef { get; set; }
+
+private TelerikTreeList TreeListRef { get; set; }
 // ...
 await TreeListRef.SetState(desiredState);
-</code></pre>
-            </td>
-            <td style="vertical-align:top">
-<pre><code>
-private TelerikTreeList<TreeListModel> TreeListRef { get; set; }
+````
+
+</td>
+<td>
+
+````C#
+private TelerikGrid GridRef { get; set; }
+// ...
+await GridRef.SetStateAsync(desiredState);
+
+// ...
+
+private TelerikTreeList TreeListRef { get; set; }
 // ...
 await TreeListRef.SetStateAsync(desiredState);
-</code></pre>
-            </td>
+````
+
+</td>
         </tr> 
     </tbody>
 </table>
@@ -253,6 +233,7 @@ This section describes changes per component.
 
 >caption Visible parameter in UI for Blazor up to version 3.7.0 and after version 4.0.0
 
+<div class="skip-repl"></div>
 <table>
     <thead><tr>
         <th>UI for Blazor 3.7.0</th>
@@ -260,16 +241,20 @@ This section describes changes per component.
     </tr></thead>
     <tbody>
         <tr>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;TelerikButton Hidden="false"&gt; Visible button &lt;TelerikButton /&gt;
-</code></pre>
-            </td>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;TelerikButton Visible="true"&gt; Visible button &lt;TelerikButton /&gt;
-</code></pre>
-            </td>
+<td>
+
+````RAZOR
+<TelerikButton Hidden="false"> Visible button <TelerikButton />
+````
+
+</td>
+<td>
+
+````RAZOR
+<TelerikButton Visible="true"> Visible button <TelerikButton />
+````
+
+</td>
         </tr>
     </tbody>
 </table>
@@ -284,6 +269,7 @@ This section describes changes per component.
 
 >caption DrawerPosition enum values in UI for Blazor up to version 3.7.0 and after version 4.0.0
 
+<div class="skip-repl"></div>
 <table>
     <thead><tr>
         <th>UI for Blazor 3.7.0</th>
@@ -291,18 +277,22 @@ This section describes changes per component.
     </tr></thead>
     <tbody>
         <tr>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;TelerikDrawer Position="@DrawerPosition.Left"&gt;
-&lt;TelerikDrawer Position="@DrawerPosition.Right"&gt;
-</code></pre>
-            </td>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;TelerikDrawer Position="@DrawerPosition.Start"&gt;
-&lt;TelerikDrawer Position="@DrawerPosition.End"&gt;
-</code></pre>
-            </td>
+<td>
+
+````RAZOR
+<TelerikDrawer Position="@DrawerPosition.Left">
+<TelerikDrawer Position="@DrawerPosition.Right">
+````
+
+</td>
+<td>
+
+````RAZOR
+<TelerikDrawer Position="@DrawerPosition.Start">
+<TelerikDrawer Position="@DrawerPosition.End">
+````
+
+</td>
         </tr>
     </tbody>
 </table>
@@ -335,6 +325,7 @@ This section describes changes per component.
 
 >caption Placeholder parameter in UI for Blazor up to version 3.7.0 and after version 4.0.0
 
+<div class="skip-repl"></div>
 <table>
     <thead><tr>
         <th>UI for Blazor 3.7.0</th>
@@ -342,16 +333,20 @@ This section describes changes per component.
     </tr></thead>
     <tbody>
         <tr>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;TelerikMaskedTextBox PlaceHolder="The placeholder text" /&gt;
-</code></pre>
-            </td>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;TelerikMaskedTextBox Placeholder="The placeholder text" /&gt;
-</code></pre>
-            </td>
+<td>
+
+````RAZOR
+<TelerikMaskedTextBox PlaceHolder="The placeholder text" />
+````
+
+</td>
+<td>
+
+````RAZOR
+<TelerikMaskedTextBox Placeholder="The placeholder text" />
+````
+
+</td>
         </tr>
     </tbody>
 </table>
@@ -362,6 +357,7 @@ This section describes changes per component.
 
 >caption Placeholder parameter in UI for Blazor up to version 3.7.0 and after version 4.0.0
 
+<div class="skip-repl"></div>
 <table>
     <thead><tr>
         <th>UI for Blazor 3.7.0</th>
@@ -369,16 +365,20 @@ This section describes changes per component.
     </tr></thead>
     <tbody>
         <tr>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;TelerikTextArea PlaceHolder="The placeholder text" /&gt;
-</code></pre>
-            </td>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;TelerikTextArea Placeholder="The placeholder text" /&gt;
-</code></pre>
-            </td>
+<td>
+
+````RAZOR
+<TelerikTextArea PlaceHolder="The placeholder text" />
+````
+
+</td>
+<td>
+
+````RAZOR
+<TelerikTextArea Placeholder="The placeholder text" />
+````
+
+</td>
         </tr>
     </tbody>
 </table>
@@ -396,16 +396,20 @@ This section describes changes per component.
     </tr></thead>
     <tbody>
         <tr>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;TelerikTextBox PlaceHolder="The placeholder text" /&gt;
-</code></pre>
-            </td>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;TelerikTextBox Placeholder="The placeholder text" /&gt;
-</code></pre>
-            </td>
+<td>
+
+````RAZOR
+<TelerikTextBox PlaceHolder="The placeholder text" />
+````
+
+</td>
+<td>
+
+````RAZOR
+<TelerikTextBox Placeholder="The placeholder text" />
+````
+
+</td>
         </tr>
     </tbody>
 </table>
