--- a/upgrade/rendering-changes/6-0-0.md
+++ b/upgrade/rendering-changes/6-0-0.md
@@ -49,6 +49,7 @@ The `span.k-breadcrumb-item-text` element renders only if the Breadcrumb item ha
 
 When a `ButtonGroupButton` inside a ButtonGroup has no `ChildContent`, it no longer renders an empty `span.k-button-text`.
 
+<div class="skip-repl"></div>
 <table>
     <thead>
         <tr>
@@ -58,22 +59,26 @@ When a `ButtonGroupButton` inside a ButtonGroup has no `ChildContent`, it no lon
     </thead>
     <tbody>
         <tr>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;button class="k-button"&gt;
-    &lt;span class="k-button-icon"&gt;...&lt;/span&gt;
-    <strong>&lt;span class="k-button-text"&gt;&lt;/span&gt;</strong>
-&lt;/button&gt;
-</code></pre>
-            </td>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;button class="k-button"&gt;
-    &lt;span class="k-button-icon"&gt;&lt;/span&gt;
+<td>
 
-&lt;/button&gt;
-</code></pre>
-            </td>
+````HTML
+<button class="k-button">
+    <span class="k-button-icon">...</span>
+    <span class="k-button-text"></span>
+</button>
+````
+
+</td>
+<td>
+
+````HTML
+<button class="k-button">
+    <span class="k-button-icon"></span>
+
+</button>
+````
+
+</td>
         </tr>
     </tbody>
 </table>
@@ -103,6 +108,7 @@ When a `ButtonGroupButton` inside a ButtonGroup has no `ChildContent`, it no lon
 * The Drawer items (`li.k-drawer-item`) render a `k-level-0` CSS class.
 * The `div.k-drawer-items` element is removed. The `k-drawer-items` CSS class is moved to the child `ul` element.
 
+<div class="skip-repl"></div>
 <table>
     <thead>
         <tr>
@@ -112,42 +118,49 @@ When a `ButtonGroupButton` inside a ButtonGroup has no `ChildContent`, it no lon
     </thead>
     <tbody>
         <tr>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;div class="k-drawer-container"&gt;
-    &lt;div class="k-drawer"&gt;
-        &lt;div class="k-drawer-wrapper"&gt;
-            <strong>&lt;div class="k-drawer-items"&gt;</strong>
-                &lt;ul&gt;
-                    &lt;li class="k-drawer-item"&gt;...&lt;/li&gt;
-                    &lt;li class="k-drawer-item"&gt;...&lt;/li&gt;
-                    &lt;li class="k-drawer-item"&gt;...&lt;/li&gt;
-                &lt;/ul&gt;
-            &lt;/div&gt;
-        &lt;/div&gt;
-    &lt;/div&gt;
-    &lt;div class="k-drawer-content"&gt;...&lt;/div&gt;
-&lt;/div&gt;
-</code></pre>
-            </td>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;div class="k-drawer-container"&gt;
-    &lt;div class="k-drawer"&gt;
-        &lt;div class="k-drawer-wrapper"&gt;
+<td>
 
-            &lt;ul <strong>class="k-drawer-items"</strong>&gt;
-                &lt;li class="k-drawer-item <strong>k-level-0</strong>"&gt;...&lt;/li&gt;
-                &lt;li class="k-drawer-item k-level-0"&gt;...&lt;/li&gt;
-                &lt;li class="k-drawer-item k-level-0"&gt;...&lt;/li&gt;
-            &lt;/ul&gt;
+````RAZOR
+<div class="k-drawer-container">
+    <div class="k-drawer">
+        <div class="k-drawer-wrapper">
+            <div class="k-drawer-items">
+                <ul>
+                    <li class="k-drawer-item">...</li>
 
-        &lt;/div&gt;
-    &lt;/div&gt;
-    &lt;div class="k-drawer-content"&gt;...&lt;/div&gt;
-&lt;/div&gt;
-</code></pre>
-            </td>
+                    <li class="k-drawer-item">...</li>
+
+                    <li class="k-drawer-item">...</li>
+
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="k-drawer-content">...</div>
+</div>
+````
+
+</td>
+<td>
+
+````RAZOR
+<div class="k-drawer-container">
+    <div class="k-drawer">
+        <div class="k-drawer-wrapper">
+
+            <ul class="k-drawer-items">
+                <li class="k-drawer-item k-level-0">...</li>
+                <li class="k-drawer-item k-level-0">...</li>
+                <li class="k-drawer-item k-level-0">...</li>
+            </ul>
+
+        </div>
+    </div>
+    <div class="k-drawer-content">...</div>
+</div>
+````
+
+</td>
         </tr>
     </tbody>
 </table>
@@ -213,6 +226,7 @@ The changes below apply to the TreeList only when the two components have the sa
 * The **Select All** filtering checkbox container (`li.k-item`) renders a `k-check-all-wrap` CSS class.
 * The filtering checkbox list item (`li.k-item`) no longer renders a `span.k-state-default` element.
 
+<div class="skip-repl"></div>
 <table>
     <thead>
         <tr>
@@ -222,50 +236,55 @@ The changes below apply to the TreeList only when the two components have the sa
     </thead>
     <tbody>
         <tr>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;ul class="<strong>k-reset</strong> k-multicheck-wrap"&gt;
-    &lt;li class="k-item"&gt;
-        <strong>&lt;span class="k-state-default"&gt;</strong>
-            &lt;span class="k-checkbox-wrap"&gt;
-                &lt;input type="checkbox" class="k-checkbox" /&gt;
-            &lt;/span&gt;
-            <strong>&lt;label class="k-checkbox-label"&gt;Select All&lt;/label&gt;</strong>
-        <strong>&lt;/span&gt;</strong>
-    &lt;/li&gt;
-    &lt;li class="k-item"&gt;
-        <strong>&lt;span class="k-state-default"&gt;</strong>
-            &lt;span class="k-checkbox-wrap"&gt;
-                &lt;input type="checkbox" class="k-checkbox" /&gt;
-            &lt;/span&gt;
-            <strong>&lt;label class="k-checkbox-label"&gt;Text&lt;/label&gt;</strong>
-        &lt;/span&gt;
-    &lt;/li&gt;
-&lt;/ul&gt;
-</code></pre>
-            </td>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;ul class="k-multicheck-wrap"&gt;
-    &lt;li class="k-item <strong>k-check-all-wrap</strong>"&gt;
-        <strong>&lt;label class="k-checkbox-label"&gt;</strong>
-            &lt;span class="k-checkbox-wrap"&gt;
-                &lt;input type="checkbox" class="k-checkbox" /&gt;
-            &lt;/span&gt;
+<td>
+
+````RAZOR
+<ul class="k-reset k-multicheck-wrap">
+    <li class="k-item">
+        <span class="k-state-default">
+            <span class="k-checkbox-wrap">
+                <input type="checkbox" class="k-checkbox" />
+            </span>
+            <label class="k-checkbox-label">Select All</label>
+        </span>
+    </li>
+    <li class="k-item">
+        <span class="k-state-default">
+            <span class="k-checkbox-wrap">
+                <input type="checkbox" class="k-checkbox" />
+            </span>
+            <label class="k-checkbox-label">Text</label>
+        </span>
+    </li>
+</ul>
+````
+
+</td>
+<td>
+
+````RAZOR
+<ul class="k-multicheck-wrap">
+    <li class="k-item k-check-all-wrap">
+        <label class="k-checkbox-label">
+            <span class="k-checkbox-wrap">
+                <input type="checkbox" class="k-checkbox" />
+            </span>
             Select All
-        <strong>&lt;/label&gt;</strong>
-    &lt;/li&gt;
-    &lt;li class="k-item"&gt;
-        <strong>&lt;label class="k-checkbox-label"&gt;</strong>
-            &lt;span class="k-checkbox-wrap"&gt;
-                &lt;input type="checkbox" class="k-checkbox" /&gt;
-            &lt;/span&gt;
+        </label>
+    </li>
+
+    <li class="k-item">
+        <label class="k-checkbox-label">
+            <span class="k-checkbox-wrap">
+                <input type="checkbox" class="k-checkbox" />
+            </span>
             Text
-        <strong>&lt;/label&gt;</strong>
-    &lt;/li&gt;
-&lt;/ul&gt;
-</code></pre>
-            </td>
+        </label>
+    </li>
+</ul>
+````
+
+</td>
         </tr>
     </tbody>
 </table>
@@ -286,6 +305,7 @@ The ListView container (`div.k-listview`) no longer renders a `k-d-flex` CSS cla
 
 The `FooterTemplate` container (`div.k-table-footer`) renders a single `span.k-table-td` element instead of a `table.k-table`.
 
+<div class="skip-repl"></div>
 <table>
     <thead>
         <tr>
@@ -295,36 +315,40 @@ The `FooterTemplate` container (`div.k-table-footer`) renders a single `span.k-t
     </thead>
     <tbody>
         <tr>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;div class="k-table-footer"&gt;
-    &lt;table class="k-table"&gt;
-        &lt;tfoot class="k-table-tfoot"&gt;
-            &lt;tr class="k-table-row"&gt;
-                <strong>&lt;td</strong> class="k-table-td"&gt;
+<td>
+
+````HTML
+<div class="k-table-footer">
+    <table class="k-table">
+        <tfoot class="k-table-tfoot">
+            <tr class="k-table-row">
+                <td class="k-table-td">
                     FooterTemplate content
-                <strong>&lt;/td&gt;</strong>
-            &lt;/tr&gt;
-        &lt;/tfoot&gt;
-    &lt;/table&gt;
-&lt;/div&gt;
-</code></pre>
-            </td>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;div class="k-table-footer"&gt;
+                </td>
+            </tr>
+        </tfoot>
+    </table>
+</div>
+````
+
+</td>
+<td>
+
+````HTML
+<div class="k-table-footer">
 
 
 
-    <strong>&lt;span</strong> class="k-table-td"&gt;
+    <span class="k-table-td">
         FooterTemplate content
-    <strong>&lt;/span&gt;</strong>
+    </span>
 
 
 
-&lt;/div&gt;
-</code></pre>
-            </td>
+</div>
+````
+
+</td>        
         </tr>
     </tbody>
 </table>
@@ -348,6 +372,7 @@ The rendering changes in the Pager also affect the components that use a Pager c
 * The selected `option` element in the native page number drop down (`select.k-picker`) no longer renders a `k-selected` CSS class. The `select` element shows on small screens instead of the pager buttons when the [Pager `Adaptive` parameter]({%slug pager-overview%}#pager-parameters) is set to `true`.
 * The page number buttons (`button.k-button`) render their content in a `span.k-button-text`.
 
+<div class="skip-repl"></div>
 <table>
     <thead>
         <tr>
@@ -357,26 +382,30 @@ The rendering changes in the Pager also affect the components that use a Pager c
     </thead>
     <tbody>
         <tr>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;button class="k-button"&gt;
+<td>
+
+````HTML
+<button class="k-button">
     10
-&lt;/button&gt;
-&lt;button class="k-button"&gt;
+</button>
+<button class="k-button">
     ...
-&lt;/button&gt;
-</code></pre>
-            </td>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;button class="k-button"&gt;
-    <strong>&lt;span class="k-button-text"&gt;10&lt;/span&gt;</strong>
-&lt;/button&gt;
-&lt;button class="k-button"&gt;
-    <strong>&lt;span class="k-button-text"&gt;...&lt;/span&gt;</strong>
-&lt;/button&gt;
-</code></pre>
-            </td>
+</button>
+````
+
+</td>
+<td>
+
+````HTML
+<button class="k-button">
+    <span class="k-button-text">10</span>
+</button>
+<button class="k-button">
+    <span class="k-button-text">...</span>
+</button>
+````
+
+</td>  
         </tr>
     </tbody>
 </table>
@@ -403,6 +432,7 @@ The rendering changes in the Pager also affect the components that use a Pager c
 * The **Upload** icon is followed by a `span.k-dropzone-hint` element.
 * The **Upload** icon and drop zone hint render inside a `div.k-external-dropzone` element, which wraps a `div.k-dropzone-hint` element.
 
+<div class="skip-repl"></div>
 <table>
     <thead>
         <tr>
@@ -412,34 +442,40 @@ The rendering changes in the Pager also affect the components that use a Pager c
     </thead>
     <tbody>
         <tr>
-            <td style="vertical-align:top">
-<pre><code>
+<td>
+
+````RAZOR
 
 
-&lt;span class="k-icon <strong>k-svg-i-folder-open</strong>"&gt;
+
+<span class="k-icon k-svg-i-folder-open">
     ...
-&lt;/span&gt;
+</span>
 
 
 
 
 
-</code></pre>
-            </td>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;div class="k-external-dropzone"&gt;
-    &lt;div class="k-dropzone-inner"&gt;
-        &lt;span class="k-icon <strong>k-svg-i-upload k-dropzone-icon</strong>"&gt;
+
+````
+
+</td>
+<td>
+
+````RAZOR
+<div class="k-external-dropzone">
+    <div class="k-dropzone-inner">
+        <span class="k-icon k-svg-i-upload k-dropzone-icon">
             ...
-        &lt;/span&gt;
-        &lt;span class="k-dropzone-hint"&gt;
+        </span>
+        <span class="k-dropzone-hint">
             ...
-        &lt;/span&gt;
-    &lt;/div&gt;
-&lt;/div&gt;
-</code></pre>
-            </td>
+        </span>
+    </div>
+</div>
+````
+
+</td>  
         </tr>
     </tbody>
 </table>
@@ -456,6 +492,7 @@ The two `span.k-progress-status` elements no longer render if the [ProgressBar l
 * The radio button element (`input.k-radio`) renders a `k-checked` CSS class when checked.
 * The `input.k-radio` element is wrapped in a `span.k-radio-wrap`.
 
+<div class="skip-repl"></div>
 <table>
     <thead>
         <tr>
@@ -465,30 +502,34 @@ The two `span.k-progress-status` elements no longer render if the [ProgressBar l
     </thead>
     <tbody>
         <tr>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;li <strong>class="k-radio-item"</strong>&gt;
+<td>
 
-    &lt;input type="radio" class="k-radio" /&gt;
+````RAZOR
+<li class="k-radio-item">
 
-    &lt;label class="k-radio-label"&gt;
+    <input type="radio" class="k-radio" />
+
+    <label class="k-radio-label">
         RadioGroup item label
-    &lt;/label&gt;
-&lt;/li&gt;
-</code></pre>
-            </td>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;li <strong>class="k-radio-list-item"</strong>&gt;
-    <strong>&lt;span class="k-radio-wrap"&gt;</strong>
-        &lt;input type="radio" class="k-radio <strong>k-checked</strong>" /&gt;
-    <strong>&lt;/span&gt;</strong>
-    &lt;label class="k-radio-label"&gt;
+    </label>
+</li>
+````
+
+</td>
+<td>
+
+````RAZOR
+<li class="k-radio-list-item">
+    <span class="k-radio-wrap">
+        <input type="radio" class="k-radio k-checked" />
+    </span>
+    <label class="k-radio-label">
         RadioGroup item label
-    &lt;/label&gt;
-&lt;/li&gt;
-</code></pre>
-            </td>
+    </label>
+</li>
+````
+
+</td>  
         </tr>
     </tbody>
 </table>
@@ -533,6 +574,7 @@ The child `div` of the TreeView item container (`li.k-treeview-item > div`) rend
 * The remove icons (`span.k-icon`) in the file list no longer render a `k-delete` CSS class.
 * The `span.k-upload-status` element in the top area contains only the upload status label and no longer wraps the Loader component and the status icon.
 
+<div class="skip-repl"></div>
 <table>
     <thead>
         <tr>
@@ -542,44 +584,49 @@ The child `div` of the TreeView item container (`li.k-treeview-item > div`) rend
     </thead>
     <tbody>
         <tr>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;div class="k-upload"&gt;
-    &lt;div class="k-upload-dropzone k-dropzone"&gt;
-        &lt;div class="k-upload-button-wrap"&gt;
+<td>
+
+````HTML
+<div class="k-upload">
+    <div class="k-upload-dropzone k-dropzone">
+        <div class="k-upload-button-wrap">
             ...
-        &lt;/div&gt;
-        &lt;span class="k-dropzone-hint"&gt;Drag and drop files here to upload&lt;/span&gt;
-        <strong>&lt;span class="k-upload-status"&gt;</strong>
-            &lt;span class="k-icon"&gt;
+        </div>
+        <span class="k-dropzone-hint">Drag and drop files here to upload</span>
+        <span class="k-upload-status">
+            <span class="k-icon">
                 ...
-            &lt;/span&gt;
-
+            </span>
             Done
-        &lt;/span&gt;
-    &lt;/div&gt;
-&lt;/div&gt;
-</code></pre>
-            </td>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;div class="k-upload"&gt;
-    &lt;div class="k-upload-dropzone k-dropzone"&gt;
-        &lt;div class="k-upload-button-wrap"&gt;
-            ...
-        &lt;/div&gt;
-        &lt;span class="k-dropzone-hint"&gt;Drag and drop files here to upload&lt;/span&gt;
+        </span>
+    </div>
+</div>
 
-        &lt;span class="k-icon"&gt;
+
+````
+
+</td>
+<td>
+
+````HTML
+<div class="k-upload">
+    <div class="k-upload-dropzone k-dropzone">
+        <div class="k-upload-button-wrap">
             ...
-        &lt;/span&gt;
-        <strong>&lt;span class="k-upload-status"&gt;</strong>
+        </div>
+        <span class="k-dropzone-hint">Drag and drop files here to upload</span>
+
+        <span class="k-icon">
+            ...
+        </span>
+        <span class="k-upload-status">
             Done
-        &lt;/span&gt;
-    &lt;/div&gt;
-&lt;/div&gt;
-</code></pre>
-            </td>
+        </span>
+    </div>
+</div>
+````
+
+</td>  
         </tr>
     </tbody>
 </table>
